# econ-sim

./: .env.example  .gitignore  PRODUCT_CHECKLIST.md  README.md  pyproject.toml
scripts/: component_lab.py  hybrid_audio_probe.js  playwright_fresh_run_check.js  playwright_gcft_audio_loopback_check.js  playwright_gcft_audio_playtest.js  playwright_gcft_council_check.js  playwright_gcft_probe.js  playwright_gcft_reels_check.js  playwright_gcft_smoke.sh  playwright_gcft_speak_check.js  playwright_gcft_stage_cycle.js  playwright_gcft_townhall_check.js  playwright_runtime.js
src/econ_sim/: __init__.py  app.py  config.py  models.py  storage.py
src/econ_sim/prompts/: persona_compact.jinja2
src/econ_sim/services/: council.py  director.py  gabriel_service.py  openai_client.py  orchestrator.py  realtime.py
tests/: test_director.py  test_gabriel_service.py  test_openai_client.py  test_prompt_quality.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/components/: BriefingTheater.tsx  CitizenGrid.tsx  DebateRoom.tsx  FeaturetteShelf.tsx  SceneViewport.tsx  SetupChamber.tsx  SetupRoomViewport.tsx  VoiceDock.tsx
web/src/hooks/: useRealtimeSession.ts  useSetupRealtimeSession.ts
web/src/lib/: api.ts  council.ts  featurettes.ts  realtimeConfig.ts  stageText.ts  themeProfiles.ts  townHall.ts
