[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-sim"
version = "0.1.0"
description = "Voice-first AGI economic simulation with OpenAI and Gabriel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "openai>=1.109.1",
  "openai-gabriel>=1.1.5",
  "pandas>=2.2.3",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.8.1",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

